# arxiv_deep_research_dataset

./: README.md  clustering.py  clustering_short_code.py  create_initial_questions.py  export_as_hf_dataset.py  pyproject.toml
dataset/test/: data.jsonl
dataset/train/: data.jsonl
dataset/validation/: data.jsonl
export/: cluster_data.json  clustered_questions_shortest_v2.json
