[project]
name = "arxiv-deep-research-dataset"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ijson>=3.3.0",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "openai>=1.73.0",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "sentence-transformers>=4.0.2",
]
